@@ -12,6 +12,7 @@ Changes for 1.3:
 
 Integrated from 1.1.x
 
+ - new algorithm for housekeeping same for all DB engines (Alexei)
  - always draw graphs for items having type "trapper" (Alexei)
  - fixed assignment of default listen port for Win agent (Eugene)
  - changed return value for 'net.tcp.port[]' of Win agent (Eugene)
